Fixing dashboard page on mobile view

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 .main-container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .body {
@@ -188,7 +188,7 @@
 
 .body1 {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: none;
     flex-direction: column;
     align-items: center;
@@ -213,7 +213,7 @@
 
 .body1-bot {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin-top: 30px;
     display: flex;
     flex-direction: column;
@@ -393,5 +393,20 @@
     .pill {
         font-size: 26px;
         width: 250px;
+    }
+}
+
+@media(min-height: 595px) {
+    .body1 {
+        height: fit-content;
+    }
+
+    .body1-bot {
+        height: fit-content;
+        justify-content: flex-start;
+    }
+
+    .pill-container {
+        margin-bottom: 10px;
     }
 }
